--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 Title: Uttaran Tribedi
-logo: /walk_grad_sunkissed_cropped_headshot.JPG
+logo: /walk_grad_sunkissed_cropped_headshot.jpeg
 #description: 
 theme: jekyll-theme-minimal
