--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Uttaran Tribedi
-logo: /walk_grad_sunkissed_cropped_headshot.jpeg
+logo: /grad_cob_pose_round.png
 #description: 
 theme: jekyll-theme-minimal
